# git-filter-repo

./: .gitignore  Makefile  Makefile.am  configure.ac  git-filter-repo  git-filter-repo.in  pyproject.toml
.github/workflows/: test.yml
git_filter_repo/: __init__.py  __main__.py
release/: pyproject.toml
