[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "git-filter-repo"
description = "Quickly rewrite git repository history"
authors = [
    { name = "Elijah Newren", email = "newren@gmail.com" },
]
readme = "README.md"
requires-python = ">= 3.5"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.scripts]
git-filter-repo = "git_filter_repo:main"

[project.urls]
Homepage = "https://github.com/newren/git-filter-repo"
Source = "https://github.com/newren/git-filter-repo"
Issues = "https://github.com/newren/git-filter-repo/issues/"

[tool.flit.module]
name = "git_filter_repo"
